--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 body {
-    background: linear-gradient(45deg, purple, blue);
+    background: linear-gradient(45deg, purple, blue 20%);
 }
 
 button {
