--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 body {
-    background: linear-gradient(45deg, purple 1%, blue 172%);
+    background: linear-gradient(154deg, purple 23.5%, aqua 135%);
 }
 
 button {
