--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 button {
-    background-color: lightblue;
+    background-color: orange;
     border: none;
     font-size: 16px;
     border-radius: 4px;
@@ -15,7 +15,7 @@ button {
 }
 
 button:hover {
-    background-color: blue;
+    background-color: red;
 }
 
 #game {
