--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 button {
-    background-color:  #80ccff;
+    background-color:  linear-gradient(to top, #80ccff, white);
     border: none;
     font-size: 16px;
     border-radius: 4px;
