--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@ body {
 }
 
 button {
-    background-color: linear-gradient(to top, #80ccff 135%, white 23.5%);
+    transition: background-color 1s ease;
+    background-color: #2284e6;
     border: none;
     font-size: 16px;
-    border-radius: 4px;
+    border-radius: 16px;
     padding: 10px;
-    cursor: pointer;
 }
 
 a {
@@ -17,10 +17,11 @@ a {
 }
 
 button:hover {
-    background-color: #008ae6;
+  
+      background-color: #58a9ff;
+      cursor: pointer;
 }
 
 #game {
     border: solid;
 }
-
