--- a/style.css
+++ b/style.css
@@ -7,9 +7,19 @@ button {
     transition: background-color 1s ease;
     background-color: #2284e6;
     border: none;
+    margin: 10px 5px 10px 5px;
     font-size: 16px;
     border-radius: 16px;
     padding: 10px;
+}
+
+nav {
+    /* background: #729eff; */
+    background: #58a9ff;
+    border-radius: 5px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
 }
 
 a {
@@ -17,9 +27,8 @@ a {
 }
 
 button:hover {
-  
-      background-color: #58a9ff;
-      cursor: pointer;
+    background-color: #58a9ff;
+    cursor: pointer;
 }
 
 #game {
