--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ button {
 }
 
 nav {
-    /* background: #729eff; */
     background: #58a9ff;
     border-radius: 5px;
     position: -webkit-sticky;
@@ -29,6 +28,10 @@ a {
 button:hover {
     background-color: #58a9ff;
     cursor: pointer;
+}
+
+.active {
+    background-color: #91c5ff;
 }
 
 #game {
