--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(154deg, purple 23.5%, aqua 135%);
+    /*background: linear-gradient(154deg, purple 23.5%, aqua 135%);*/
     font-family: sans-serif;
 }
 
@@ -37,3 +37,20 @@ button:hover {
 #game {
     border: solid;
 }
+.bg {
+	z-index: -1;
+	margin: 0px auto; 
+    background-image: url("background.png");
+	opacity: 0.4;
+	position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%; 
+	width: 100%;    
+	background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
