--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ button:hover {
     right: 0;
     height: 100%;
     width: 100%;
-    background: url("background.png") no-repeat center;
+    background: url("images/background.png") no-repeat center;
     background-size: cover;
 }
 
