--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ button:hover {
 
 #game {
     border: solid;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .bg {
